[package]
name = "rust-roon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
tokio = { version = "1.24.1", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = "0.18.0"
if-addrs = "0.10.1"
uuid = {version = "1.2.2", features = ["v4"]}
url = "2.2.2"
serde_json = "1.0"
regex = "1.5.5"

[features]
pairing = []
status = []
transport = ["pairing"]
default = []
