[package]
name = "roon-api"
version = "0.3.0"
authors = ["The Appgineer"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/theappgineer/rust-roon-api"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
tokio = { version = "1.24.1", features = ["io-std", "macros", "rt", "sync", "time"] }
tokio-tungstenite = "0.21.0"
if-addrs = "0.13.1"
uuid = { version = "1.2.2", features = ["v4"] }
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2"
regex = "1.5.5"
log = "0.4"

[dev-dependencies]
simple-logging = "2.0"

[features]
pairing = []
status = []
settings = []
image = []
transport = ["pairing"]
browse = ["pairing"]
default = []
